deployment.yaml
# 컨테이너 실행
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: test-container
        image: 707677861059.dkr.ecr.ap-northeast-2.amazonaws.com/test-ecr-namespace/test-ecr:latest
        ports:
        - containerPort: 5000
