alb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: ClusterIP # 혹은NodePort
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
