app-service.yaml
# 로드밸런서 설정
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: default
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
