clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask  # flask-app의 라벨과 매칭
  ports:
    - protocol: TCP
      port: 80       # 서비스 포트
      targetPort: 5000  # 컨테이너 포트
  type: ClusterIP
