nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-nodeport
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080  # EKS 노드에서 접근할 포트 (30000~32767 범위에서 선택)
  type: NodePort
